src/test/deca/context/valid/test_oparith_int_float.deca
// Description:
//    affectation et operation reussis
//
// Resultats:
//    a = 40.0
//
// Historique:
//    cree le 01/01/2024

{
   float a = 42 - 2.0 ;
}
