src/test/deca/context/invalid/test_decl_var_without_type.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 11: identifiant introuvable.
// 
// Historique:
//    cree le 01/01/2024

{
   a = 1;
}
